2007-07-05  Nick Clifton  <nickc@redhat.com>

	* lib/utils-lib.exp: Update copyright notice to refer to GPLv3.
	* config/default.exp, binutils-all/ar.exp,
	binutils-all/dlltool.exp, binutils-all/nm.exp,
	binutils-all/objcopy.exp, binutils-all/arm/objdump.exp,
	binutils-all/hppa/objdump.exp, binutils-all/m68k/objdump.exp,
	binutils-all/vax/objdump.exp, binutils-all/windres/windres.exp,
	binutils-all/windres/msupdate: Likewise.

2007-06-23  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/strip-3.d: Also strip .xtensa.info section.

2007-05-24  Kai Tietz  <Kai.Tietz@onevision.com>

	* binutils-all/windres/version_cat.rc: New.
	* binutils-all/windres/version_cat.rsd: New.

2007-05-23  Kai Tietz  <Kai.Tietz@onevision.com>

	* binutils-all/windres/html.rc: New.
	* binutils-all/windres/html.rsd: New.
	* binutils-all/windres/html1.hm: New.
	* binutils-all/windres/html2.hm: New.
	* binutils-all/windres/messagetable.rc: New.
	* binutils-all/windres/messagetable.rsd: New.
	* binutils-all/windres/MSG00001.bin: New.
	* binutils-all/windres/strtab2.rc: New.
	* binutils-all/windres/strtab2.rsd: New.
	* binutils-all/windres/version.rc: New.
	* binutils-all/windres/version.rsd: New.
	* binutils-all/windres/dialog.rsd: Fix expected results.

2007-05-17  Joseph Myers  <joseph@codesourcery.com>

	* binutils-all/strip-3.d: Strip .pdr section.

2007-05-15  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/objcopy.exp: Only run needed-by-reloc test for ELF.

2007-05-11  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/needed-by-reloc.s: Use .long rather than .4byte.

2007-05-08  Mark Shinwell  <shinwell@codesourcery.com>

	* binutils-all/strip-3.d: Strip .ARM.attributes and .reginfo
	sections.

2007-05-02  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/objcopy.exp (copy_setup): Don't perror, use send_log.
	(copy_executable): Return early if test2 is blank.
	Return unsupported rather than unresolved if we can't run
	executables.  Do test1 if we can compile.
