@@ -3,7 +3,7 @@
 #objcopy: --set-section-flags foo=contents,alloc,load,code
 #name: copy with setting section flags 2
 #source: copytest.s
-#not-target: *-*-aout
+#not-target: *-*-*aout
 # Note - we use copytest.s and a section named "foo" rather
 # than .text because for some file formats (eg PE) the .text
 # section has a fixed set of flags and these cannot be changed.
